# biped_ws

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/biped_bringup/: CMakeLists.txt  package.xml
src/biped_bringup/launch/: biped_bringup_gazebo.launch.py  biped_bringup_gazebo_with_control.launch.py  biped_bringup_isaacsim.launch.py  biped_bringup_isaacsim_with_control.launch.py  biped_bringup_real_robot_with_control.launch.py
src/biped_bringup/rviz/: sim_robot.rviz
src/biped_bringup_sim/: CMakeLists.txt  package.xml
src/biped_bringup_sim/biped_bringup_sim/: gui_sliders_biped_joints_control.py
src/biped_bringup_sim/config/: gz_bridge.yaml
src/biped_bringup_sim/launch/: biped_bringup_gazebo_with_control.launch.py  biped_bringup_isaacsim_with_control.launch.py  biped_bringup_sim.launch.py  biped_bringup_sim_gazebo.launch.py  biped_bringup_sim_isaacsim.launch.py  biped_bringup_sim_with_control.launch.py  sim_biped.launch.py
src/biped_bringup_sim/rviz/: isaacsim_robot.rviz
src/biped_control/: CMakeLists.txt  package.xml
src/biped_control/config/: biped_controllers.yaml
src/biped_control/launch/: biped_control.launch.py  biped_control_position.launch.py  biped_control_trajectory.launch.py
src/biped_description/: CMakeLists.txt
src/biped_description/launch/: biped_description.launch.py  biped_description_launch.py  debug_biped_description_launch.py
src/biped_description/meshes/: right_hip_roll_link.STL  right_knee_link.STL
src/biped_description/urdf/: biped.urdf  biped.urdf.xacro  biped_gazebo_ros2_control.urdf  biped_isaacsim_ros2_control.urdf  biped_real_ros2_control.urdf  biped_sim_ros2_control.urdf  biped_with_control.urdf.xacro  biped_with_sensors_control.urdf.xacro  bipedal.urdf.xacro  extra_foot.urdf  gazebo_sensors.urdf
src/biped_hardware_interface/: CMakeLists.txt  biped_hardware_interface.xml  package.xml
src/biped_hardware_interface/include/biped_hardware_interface/: biped_system.hpp  microcontroller_comms.hpp
src/biped_hardware_interface/src/: biped_system.cpp  serial_debug.cpp  serial_example.cpp
src/biped_hardware_interface/test/: test_biped_system.cpp
src/biped_isaacsim/: CMakeLists.txt  package.xml
src/biped_isaacsim/usd/: biped_env_usd.usd
src/biped_rl_control/: package.xml  setup.cfg  setup.py
src/biped_rl_control/biped_rl_control/: policy_runner.py
src/biped_rl_control/config/: biped_rl_control_params.yaml
src/biped_rl_control/launch/: biped_rl_control_launch.py
src/biped_teleop/: package.xml  setup.py
src/biped_teleop/biped_teleop/: biped_teleop_node.py
system_settings/pc_settings/: esp32_rules.d
(+19 files in other folders)
